docs/tests/parser/declarations/valid/VarDeclArray1D.src
fn void test() {
    let int a[10];
    let float b[256];
    let char c[64];
}
