docs/tests/parser/declarations/invalid/VarDeclTrailingComma.src
fn void test() {
    let int a, b, c,;
}
